--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "prod-booker3",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongodb": "^5.8.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
