--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backDev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^5.8.0",
+    "mongoose": "^7.4.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
     "vite": "^4.4.9"
   }
 }
